--- a/src/Css/Login.css
+++ b/src/Css/Login.css
@@ -1,55 +1,73 @@
+body,
+html {
+  height: 100%;
+  margin: 0;
+}
+
+.main-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.container {
+  max-width: 500px; 
+}
+
 .content {
-    max-width: 400px; /* Set a more reasonable width for the entire content */
-    margin: 0 auto;
-  }
-  
-  .image {
-    width: 100%; /* Make the image fill the content wrapper */
-    height: 120px; /* Adjust the image height */
-    object-fit: cover; /* Ensure the image doesn't stretch */
-  }
-  
-  .title {
-    font-size: 1.2rem; /* Resize the title */
-  }
-  
-  .subtitle {
-    font-size: 1rem; /* Resize the subtitle */
-  }
-  
-  .form-control {
-    font-size: 0.9rem; /* Resize the form input text */
-    padding: 10px; /* Adjust padding to match new size */
-  }
-  
-  .imgs {
-    width: 100%;
-  }
-  .btn{
-    border-radius: 25px;
-  }
-  .form-control{
-    border-radius: 25px;
-    background-color: white;
-    border: 1px solid black;
-  }
-  .input-group {
-    position: relative;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
+  border-radius: 10px; 
+  background-color: white; 
+  max-width: 500px; 
+  margin: 0 auto;
+}
+.image {
+  width: 100%; 
+  height: 120px; 
+  object-fit: cover; 
+}
+
+.title {
+  font-size: 1.2rem;
+}
+
+.subtitle {
+  font-size: 1rem; 
 }
 
 .form-control {
-    padding-right: 40px; /* Ensure space for the button */
+  font-size: 0.9rem; 
+  padding: 10px; 
+}
+
+.imgs {
+  width: 100%;
+}
+.btn {
+  border-radius: 25px;
+}
+.form-control {
+  border-radius: 25px;
+  background-color: white;
+  border: 1px solid black;
+}
+.input-group {
+  position: relative;
+}
+
+.form-control {
+  padding-right: 40px; 
 }
 
 .input-group-text {
-    position: absolute;
-    right: 0;
-    top: 0;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    background-color: transparent; /* Make the button background transparent */
-    padding: 0 25px;
-    cursor: pointer;
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  background-color: transparent; 
+  padding: 0 25px;
+  cursor: pointer;
 }
-
